[tool.poetry]
name = "container-test"
version = "0.1.0"
description = "a quick streamlit-based frontend to test deployment of various hosting-services"
authors = ["Andreas Fleck <fleckiiiiiiiimit8i+github@gmail.com>"]
readme = "README.md"
packages = [{include = "container_test"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">1.21.0"
plotly = "^5.15.0"
pandas = "^2.0.3"
pydantic = "^2.0.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
geopy = "^2.3.0"
emoji-country-flag = "^1.3.2"
pytz = "^2023.3"
timezonefinder = "^6.2.0"
pvlib = "^0.10.1"
numba = "^0.57.1"
streamlit = "^1.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
ipykernel = "^6.24.0"
nbformat = "^5.9.0"
ipywidgets = "^8.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
